Add image for builder

--- a/freqtrade/config.yaml
+++ b/freqtrade/config.yaml
@@ -3,7 +3,7 @@ version: 0.1.0
 slug: freqtrade
 description: Freqtrade is a free and open source crypto trading bot written in Python
 url: https://github.com/TECH7Fox/freqtrade-hass-addons
-#image: "ghcr.io/tech7fox/{arch}-addon-freqtrade"
+image: "ghcr.io/tech7fox/{arch}-addon-freqtrade"
 arch:
   - armhf
   - armv7
